# tuxedo

./: .gitignore  Cargo.toml  README.md
mongodb_model/: Cargo.toml
mongodb_model/src/: lib.rs  mongodb_model.rs  result.rs
mongodb_model_derive/: Cargo.toml
mongodb_model_derive/src/: lib.rs
src/: error.rs  lib.rs  mask.rs
src/database/: index.rs  mod.rs  pagination.rs  pair.rs
src/database/mongodb/: conversions.rs  destination.rs  destination_builder.rs  mod.rs  source.rs  source_builder.rs
src/database/postgres/: mod.rs  source.rs
src/database/traits/: connection_testable.rs  destination.rs  index.rs  mod.rs  read.rs  source.rs  write.rs
src/replication/: manager.rs  manager_builder.rs  mod.rs  processor.rs  task.rs  types.rs
tuxedo/: Cargo.toml  Taskfile.dist.yml
tuxedo/src/: error.rs  lib.rs
tuxedo/src/replication/: manager_builder.rs  mod.rs  processor.rs  task.rs  types.rs
