[package]
name = "tuxedo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.121"
serde_with = "3.8.3"
#serde-aux = "4.5.0"
#garde = "0.20.0"

# Errors
thiserror = "1.0.61"

# Async
tokio = { version = "1.39.2", features = ["full"] }
futures = "0.3.30"
futures-util = "0.3.31"
async-trait = "0.1.83"
rayon = "1.10.0"

# Data faking / masking
rand = "0.8.5"
fake = "2.10.0"
convert_case = "0.6"

# CLI interface
indicatif = { version = "0.17.8" }

num_cpus = "1.16.0"

[dependencies.mongodb]
version = "3.1.0"
features = []

[dependencies.bson]
version = "2.13.0"
features = ["serde_with", "chrono-0_4"]
