[package]
name = "tuxedo"
version = "0.4.0"
edition = "2021"
authors = ["Jordan Van Allen <jordanvanallen@gmail.com>"]
description = "A parallel masking library for MongoDB"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jordanvanallen/tuxedo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "3.11"
#serde-aux = "4.5.0"
#garde = "0.20.0"

# Errors
thiserror = "2.0"

# Async
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
async-trait = "0.1.83"
rayon = "1.10.0"

# Dates/Time
chrono = "0.4.40"

# Data faking / masking
rand = "0.8.5"
fake = "3.0"
convert_case = "0.6"

# CLI interface
indicatif = { version = "0.17.9" }

num_cpus = "1.16.0"

[dependencies.mongodb]
version = "3.2.3"
features = ["zstd-compression", "zlib-compression", "snappy-compression"]

[dependencies.bson]
version = "2.14.0"
features = ["serde_with", "chrono-0_4"]
