[package]
name = "tuxedo"
version = "0.4.1"
edition = "2021"
authors = ["Jordan Van Allen <jordanvanallen@gmail.com>"]
description = "A parallel masking library for MongoDB"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jordanvanallen/tuxedo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"

# Errors
thiserror = "2.0"

# Async
tokio = { version = "1.42.0", features = ["full"] }
futures-util = "0.3.31"
async-trait = "0.1.83"

# Data faking / masking
fake = "3.0"

# CLI interface
indicatif = { version = "0.17.9" }

num_cpus = "1.16.0"
url = "2.5.4"

[dependencies.mongodb]
version = "3.2.3"
features = ["zlib-compression", "zstd-compression", "snappy-compression"]

[dependencies.bson]
version = "2.14.0"
features = ["serde_with", "chrono-0_4"]
